# NCAnimate

./: .gitignore  CMakeLists.txt
src/: main.cpp
